@@ -34,27 +34,18 @@ import com.google.common.collect.ImmutableList;
 
 public class Familiar11Biome {
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-9138790).waterColor(4159204).waterFogColor(329011)
-				.skyColor(-9138790).foliageColorOverride(10387789).grassColorOverride(9470285).build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-9138790).waterColor(4159204).waterFogColor(329011).skyColor(-9138790).foliageColorOverride(10387789).grassColorOverride(9470285).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("elementure:tree_familiar_11", FeatureUtils.register("elementure:tree_familiar_11", Feature.TREE,
-						new TreeConfiguration.TreeConfigurationBuilder(
-								BlockStateProvider.simple(ElementureModBlocks.OLDLOG.get().defaultBlockState()), new StraightTrunkPlacer(8, 2, 0),
-								BlockStateProvider.simple(ElementureModBlocks.OLDLEAVES.get().defaultBlockState()),
-								new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
-								.decorators(ImmutableList.of(Familiar11LeaveDecorator.INSTANCE, Familiar11TrunkDecorator.INSTANCE,
-										Familiar11FruitDecorator.INSTANCE))
-								.build()),
-						List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
-								BiomeFilter.biome())));
+				PlacementUtils.register("elementure:tree_familiar_11",
+						FeatureUtils.register("elementure:tree_familiar_11", Feature.TREE,
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ElementureModBlocks.OLDLOG.get().defaultBlockState()), new StraightTrunkPlacer(8, 2, 0),
+										BlockStateProvider.simple(ElementureModBlocks.OLDLEAVES.get().defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+										.decorators(ImmutableList.of(Familiar11LeaveDecorator.INSTANCE, Familiar11TrunkDecorator.INSTANCE, Familiar11FruitDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("elementure:grass_familiar_11", VegetationFeatures.PATCH_GRASS,
-						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
-								BiomeFilter.biome())));
+				PlacementUtils.register("elementure:grass_familiar_11", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.NONE).temperature(0.5f).downfall(0f).specialEffects(effects)
-				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.NONE).temperature(0.5f).downfall(0f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
